# Pick2Pack_Custom_PhoneCase-Project

./: README.md
UI/: Admin_UI.py  User_UI.py
control/pick2pack/: package.xml  setup.cfg  setup.py
control/pick2pack/launch/: integrated_all.launch.py
control/pick2pack/pick2pack/: final_integrated_node.py
html/templates/: admin.html  index.html
