<?xml version="1.0"?>
<package format="3">
  <name>pick2pack</name>
  <version>0.0.0</version>
  <description>Integrated System</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>